[gd_scene load_steps=3 format=3 uid="uid://cn1xpwhtwrkon"]

[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_5ofq8"]
[ext_resource type="Script" path="res://scenes/online_battle/lobby/room/custom_battlefield_settings/custom_battlefield_settings.gd" id="2_k05km"]

[node name="CustomBattlefieldSettings" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -493.0
offset_bottom = -362.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_5ofq8")
script = ExtResource("2_k05km")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "@STAGE_WIDTH"

[node name="StageWidthSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1500.0
max_value = 10000.0
step = 500.0
value = 1500.0

[node name="StageWidthValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "@DOG_TOWER_HEALTH"

[node name="TowerHealthSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 500.0
max_value = 50000.0
step = 500.0
value = 500.0

[node name="TowerHealthValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "@MONEY_EFFICIENCY_LEVEL"

[node name="MoneyEfficiencySlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="MoneyEfficiencyValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "@POWER_LEVEL"

[node name="PowerSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="PowerValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer5" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "@MUSIC"

[node name="MusicOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/VBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MusicName" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ThemeLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer5/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "@THEME
"

[node name="ThemeOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/VBoxContainer5/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="ThemeName" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer5/HBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
